--- a/index.html
+++ b/index.html
@@ -68,10 +68,10 @@ td, th {
    로그인 영역
 ================================ */
 .topBar {
-    position: relative;
-    display: flex;
-    justify-content: flex-end;
-    margin-bottom: 10px;
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    z-index: 1000;
 }
 
 #loginArea {
@@ -427,7 +427,7 @@ td, th {
 </div>
 
 <!-- 로그인 -->
-    <div class="topBar">
+ <div class="topBar">
 <div id="loginArea">
     <button id="googleLoginBtn">Google 로그인</button>
     <button id="logoutBtn" style="display:none;">로그아웃</button>
