--- a/index.html
+++ b/index.html
@@ -67,6 +67,9 @@ td, th {
 /* ===============================
    로그인 영역
 ================================ */
+   .app {
+    position: relative; /* 🔥 기준점 */
+}
 .topBar {
     position: absolute;
     top: 10px;
