--- a/index.html
+++ b/index.html
@@ -125,9 +125,14 @@ td, th {
    3대 기록
 ================================ */
 #total3 {
-    font-size:26px;
-    color:#FFD700;
-    margin-bottom:15px;
+    text-align: center;
+    font-size: 38px;
+    font-weight: 900;
+    color: #FFD700;
+    margin: 28px 0 22px;
+    padding: 12px 0;
+    border-radius: 12px;
+    background: rgba(255, 215, 0, 0.08);
 }
 
 .rmInput {
