--- a/index.html
+++ b/index.html
@@ -126,13 +126,11 @@ td, th {
 ================================ */
 #total3 {
     text-align: center;
-    font-size: 38px;
+    font-size: 36px;
     font-weight: 900;
     color: #FFD700;
-    margin: 28px 0 22px;
-    padding: 12px 0;
-    border-radius: 12px;
-    background: rgba(255, 215, 0, 0.08);
+    margin: 24px 0 20px;
+    letter-spacing: 1px;
 }
 
 .rmInput {
