--- a/index.html
+++ b/index.html
@@ -182,7 +182,8 @@ td, th {
 }
 
 .dateControl {
-    flex: 1.2;   /* 🔥 날짜 영역 살림 */
+   display: flex;
+    align-items: center; /* 🔥 이게 핵심 */
 }
 
 .recordFormRow input[type="number"] {
