--- a/index.html
+++ b/index.html
@@ -331,7 +331,13 @@ td, th {
     background:#8b0000;
     color:white;
 }
-
+.dateBtn {
+    width: 20px;
+    height: 40px;
+    padding: 0;
+    font-size: 14px;
+    flex: 0 0 auto;
+}
 </style>
 </head>
 
