--- a/index.html
+++ b/index.html
@@ -338,6 +338,12 @@ td, th {
     font-size: 14px;
     flex: 0 0 auto;
 }
+   /* 날짜 input 폭 축소 */
+.r-date {
+    width: 70px;     /* 🔥 기존 80 → 축소 */
+    min-width: 70px;
+    flex: 0 0 70px;  /* flex 영향 차단 */
+}
 </style>
 </head>
 
