--- a/index.html
+++ b/index.html
@@ -343,6 +343,7 @@ td, th {
     width: 70px;     /* 🔥 기존 80 → 축소 */
     min-width: 70px;
     flex: 0 0 70px;  /* flex 영향 차단 */
+   font-size: 12px;
 }
 </style>
 </head>
