--- a/index.html
+++ b/index.html
@@ -343,6 +343,8 @@ td, th {
 .r-date {
     width: 70px;     /* 🔥 기존 80 → 축소 */
     min-width: 70px;
+    background: #222;      /* 🔥 투명 금지 */
+    color: white;          /* 🔥 명시 */
     flex: 0 0 70px;  /* flex 영향 차단 */
    font-size: 12px;
 }
