--- a/index.html
+++ b/index.html
@@ -1022,9 +1022,9 @@ updateDateDisplay(selectedDate);
 }
 
 document.getElementById('dateDisplay').onclick = () => {
-  // 달력 탭으로 이동만 시킴
-  document.querySelector('.tabBtn[data-target="tab3"]').click();
+  openRecordDatePopup();
 };
+
 
 
 
