--- a/index.html
+++ b/index.html
@@ -429,6 +429,8 @@ td, th {
         </tr>
     </table>
     <button id="save3Btn">3대 기록 저장</button>
+<div id="save3Result" style="margin-top:6px;font-size:13px;opacity:0.8;"></div>
+
 
     <div class="recordFolders">
         <button class="folderBtn active" data-target="benchBox">벤치</button>
@@ -460,7 +462,7 @@ td, th {
   <button id="recordAdd">저장</button>
 </div>
 
-
+<div id="recordMessage" style="font-size:13px;margin-top:6px;opacity:0.8;"></div>
 <!-- 달력 -->
 <div id="tab3" class="tabContent">
     <div class="calendar">
