--- a/index.html
+++ b/index.html
@@ -886,6 +886,18 @@ if (isToday) {
     cell.addEventListener("touchstart", () => {
       timer = setTimeout(() => calOpenPopup(key), 500);
     });
+
+// ⭐ 짧게 클릭 → 날짜 선택용
+cell.addEventListener("click", () => {
+  // recordDate에 날짜 반영
+  const [y, m, d] = key.split("-");
+  recordDate.value = `${y}.${String(m).padStart(2,'0')}.${String(d).padStart(2,'0')}`;
+
+  // 달력 닫기
+  calPopup.classList.add("hidden");
+});
+
+     
     cell.addEventListener("touchend", () => clearTimeout(timer));
 
     cell.addEventListener("mousedown", () => {
