--- a/index.html
+++ b/index.html
@@ -889,6 +889,7 @@ if (isToday) {
 
 // ⭐ 짧게 클릭 → 날짜 선택용
 cell.addEventListener("click", () => {
+   e.stopPropagation();   // ⭐ 팝업 충돌 방지
   // recordDate에 날짜 반영
   const [y, m, d] = key.split("-");
   recordDate.value = `${y}.${String(m).padStart(2,'0')}.${String(d).padStart(2,'0')}`;
