--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@ td, th {
 
 .dateYear {
     font-size: 11px;
-    opacity: 0.9;
+    opacity: 0.85;
 }
 
 .dateMD {
@@ -388,7 +388,7 @@ td, th {
     <div class="recordFormRow">
        <input type="hidden" id="recordDate">
        <div class="dateDisplay">
-    <div class="dateYear" id="displayYear">[ 2026 ]</div>
+    <div class="dateYear" id="displayYear">2026</div>
     <div class="dateMD" id="displayMD">01.09</div>
 </div>
 
