--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ td, th {
     position: absolute;
     top: 10px;
     right: 10px;
-    z-index: 1000;
+    z-index: 9999;
 }
 
 #loginArea {
@@ -90,6 +90,7 @@ td, th {
     padding: 6px 10px;
     font-size: 12px;
     border-radius: 6px;
+    white-space: nowrap;
 }
 
 #userInfo {
@@ -125,9 +126,12 @@ td, th {
    3대 기록
 ================================ */
 #total3 {
-    font-size:26px;
-    color:#FFD700;
-    margin-bottom:15px;
+      text-align: center;        /* 가운데 */
+    font-size: 28px;           /* 큼직 */
+    font-weight: 800;          /* 굵게 */
+    letter-spacing: 0.5px;     /* 살짝 고급 */
+    margin: 20px 0 16px;
+    color: #FFD700;
 }
 
 .rmInput {
