--- a/index.html
+++ b/index.html
@@ -74,16 +74,13 @@ td, th {
     position: absolute;
     top: 10px;
     right: 10px;
-    z-index: 9999;
+    width: auto;
 }
 
 #loginArea {
-    position: static;
     display: flex;
     align-items: center;
     gap: 6px;
-    padding: 0;
-    background: none;
 }
 
 #loginArea button {
