--- a/index.html
+++ b/index.html
@@ -338,7 +338,16 @@ td, th {
     font-size: 13px;
     font-weight: bold;
 }
+/* 🔥 number input +/- 버튼 제거 */
+input[type="number"]::-webkit-outer-spin-button,
+input[type="number"]::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
 
+input[type="number"] {
+    -moz-appearance: textfield; /* Firefox */
+}
 </style>
 </head>
 
