--- a/index.html
+++ b/index.html
@@ -651,6 +651,7 @@ folderBtns.forEach(btn=>{
             if(fc.id === target) fc.classList.add('active');
             else fc.classList.remove('active');
         });
+       renderActiveBox();
     });
 });
 
